[gd_scene load_steps=5 format=3 uid="uid://dofa0jnydwq2g"]

[ext_resource type="Script" uid="uid://qvdm14mqq37v" path="res://Menus/UI/PauseMenu/pause_menu.gd" id="1_6spvd"]
[ext_resource type="Script" uid="uid://31o50lbp6fq2" path="res://Menus/UI/PauseMenu/options.gd" id="2_24loc"]

[sub_resource type="LabelSettings" id="LabelSettings_6spvd"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_2tqln"]
font_size = 32

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6spvd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.346
anchor_top = 0.147
anchor_right = 0.654
anchor_bottom = 0.853
offset_left = 0.40799
offset_top = -0.255997
offset_right = -0.408081
offset_bottom = 0.255981
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.107
offset_bottom = -0.00600433
grow_horizontal = 2
text = "Pause"
label_settings = SubResource("LabelSettings_6spvd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.105
anchor_top = 0.205
anchor_right = 0.895
anchor_bottom = 0.904
offset_left = -0.170002
offset_top = 0.109993
offset_right = 0.169983
offset_bottom = -0.0320129
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Options"

[node name="QuitMenu" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit to Menu"

[node name="QuitDesktop" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Quit to Desktop"

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.221
anchor_right = 0.67
anchor_bottom = 0.897
offset_left = -0.160004
offset_top = -0.208008
offset_right = 0.159973
offset_bottom = -0.255981
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_24loc")

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.13
offset_bottom = 0.0599937
grow_horizontal = 2
text = "Options"
label_settings = SubResource("LabelSettings_2tqln")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.148
anchor_top = 0.155
anchor_right = 0.852
anchor_bottom = 0.785
offset_left = -0.0159988
offset_top = 0.110001
offset_right = 0.0159912
offset_bottom = 0.169983
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsContainer" type="VBoxContainer" parent="Options/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Controls" type="VBoxContainer" parent="Options/ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/ScrollContainer/OptionsContainer/Controls"]
layout_mode = 2
text = "Controls"
horizontal_alignment = 1

[node name="Sensitivity" type="HBoxContainer" parent="Options/ScrollContainer/OptionsContainer/Controls"]
layout_mode = 2

[node name="Sensitivity" type="Label" parent="Options/ScrollContainer/OptionsContainer/Controls/Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sensitivity"
horizontal_alignment = 1

[node name="SensitivitySlider" type="HSlider" parent="Options/ScrollContainer/OptionsContainer/Controls/Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 200.0
value = 100.0

[node name="SoundOptions" type="VBoxContainer" parent="Options/ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/ScrollContainer/OptionsContainer/SoundOptions"]
layout_mode = 2
text = "Sound"
horizontal_alignment = 1

[node name="Master" type="HBoxContainer" parent="Options/ScrollContainer/OptionsContainer/SoundOptions"]
layout_mode = 2

[node name="Voume" type="Label" parent="Options/ScrollContainer/OptionsContainer/SoundOptions/Master"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="Options/ScrollContainer/OptionsContainer/SoundOptions/Master"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="Music" type="HBoxContainer" parent="Options/ScrollContainer/OptionsContainer/SoundOptions"]
layout_mode = 2

[node name="Voume" type="Label" parent="Options/ScrollContainer/OptionsContainer/SoundOptions/Music"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Options/ScrollContainer/OptionsContainer/SoundOptions/Music"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="SFX" type="HBoxContainer" parent="Options/ScrollContainer/OptionsContainer/SoundOptions"]
layout_mode = 2

[node name="Voume" type="Label" parent="Options/ScrollContainer/OptionsContainer/SoundOptions/SFX"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="Options/ScrollContainer/OptionsContainer/SoundOptions/SFX"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="OptionsClose" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.112
anchor_top = 0.842
anchor_right = 0.888
anchor_bottom = 0.963
offset_left = 0.0959969
offset_top = 0.203979
offset_right = -0.0960388
offset_bottom = 0.205963
grow_horizontal = 2
grow_vertical = 2
text = "Close"

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="resume"]
[connection signal="pressed" from="Panel/VBoxContainer/Options" to="Options" method="show"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitMenu" to="." method="_on_quit_menu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitDesktop" to="." method="_on_quit_desktop_pressed"]
[connection signal="value_changed" from="Options/ScrollContainer/OptionsContainer/Controls/Sensitivity/SensitivitySlider" to="Options" method="_on_sensitivity_slider_value_changed"]
[connection signal="value_changed" from="Options/ScrollContainer/OptionsContainer/SoundOptions/Master/MasterSlider" to="Options" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Options/ScrollContainer/OptionsContainer/SoundOptions/Music/MusicSlider" to="Options" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Options/ScrollContainer/OptionsContainer/SoundOptions/SFX/SFXSlider" to="Options" method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="Options/OptionsClose" to="Options" method="hide"]
